created draft of navbar.handlebars, but in the future, will look at making it more functional

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,3 +1,18 @@
-<nav class = "menu">
-    
+<nav>
+    <div id = "navbar-menu">
+        <ul id = "on-top" class = "navbar-links">
+            <li class = "nav-option">
+                <a class = "link" href = "/">Home</a>
+            </li>
+            <li class = "nav-option">
+                <a class = "link" href = "/">Login</a>
+            </li>
+            <li class = "nav-option">
+                <a class = "link" href = "/">Portfolio</a>
+            </li>
+            <li class = "nav-option">
+                <a class = "link" href = "/">Inspire Yourself</a>
+            </li>
+        </ul>
+    </div>
 </nav>
