--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,9 +4,12 @@
             <li class = "nav-option">
                 <a class = "link" href = "/">Home</a>
             </li>
-            <li class = "nav-option">
-                <a class = "link" href = "/">Login</a>
-            </li>
+            {{#if logged_in}}
+            <a href="/">Profile</a> |
+            <button class="no-button" id="logout">Logout</button>
+            {{else}}
+            <a href="/">Login</a>
+            {{/if}}
             <li class = "nav-option">
                 <a class = "link" href = "/">Portfolio</a>
             </li>
