--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,4 +29,11 @@
   {{/if}}
 </body>
 
+<footer>
+  <p> If you'd like to contact us, then you may do so with the provided information below:
+    Email: ...
+    Number: ...
+  </p>
+</footer>
+
 </html>
