--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -46,7 +46,7 @@
             <a href="/">Profile</a> |
             <button class="button is-primary" id="logout">Logout</button>
             {{else}}
-             <button class="button is-primary" id="login">Login/Sign-Up</button>
+             <a href="/login" ><button class="button is-primary" id="login">Login/Sign-Up</button></a>
             {{/if}}
           </a>
       </div>
