--- a/views/partials/quotes.handlebars
+++ b/views/partials/quotes.handlebars
@@ -3,11 +3,9 @@
 <a href = "/Inspirit-Group-Project-2/...{{id}}">
 <!-- the above href will be properly setup once we have the folder for the quotes created -->
 
-<header>{{name}}</header>
+<section>{{quote}}</section>
 
-<section>{{description}}</section>
-
-<section>{{source}}</section>
+<section>{{author}}</section>
 
 </a>
 
