--- a/views/partials/quotes.handlebars
+++ b/views/partials/quotes.handlebars
@@ -1,6 +1,6 @@
 <section class = "quote-container">
 
-<a href = "/Inspirit-Group-Project-2/...{{id}}">
+<a href = "/Inspirit-Group-Project-2/seeds/quoteData.json">
 <!-- the above href will be properly setup once we have the folder for the quotes created -->
 
 <section>{{quote}}</section>
