added basic background image to homepage partial

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
 <div class = "home-container">
+  <body style="background-image: url(../images/homepage\ library\ background\ image.jpg)">
   <p class = "about"> This is where a description of our app will go.</p>
   <br>
   <p class = "instructions"> This is where someone can look to see how to use this app. A short set of instructions, for instance.</p>
+  </body>
 </div>
