fixed background image appearing

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <div class = "home-container">
+  <img src="../images/homepageimage.jpg" />
   <body>
   <p class = "about"> In spirit with the theme of this app, how this app came to be started with its creators being at a loss for inspiration. Eventually, it dawned on the creators that an app to help stimulate creativity would be helpful to anyone. Inspirit's goal is to expose users to new quotes and ideas to aid users' innovation and imaginations.</p>
   <br>
