--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,3 +17,8 @@ header, .project:not(:last-child) {
   text-decoration: underline;
 }
 
+.home-container {
+  background-image: url('../../images/homepageimage.jpg');
+  
+}
+
