--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -25,7 +25,7 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
 
-      <a href="/homepage"><button class="button is-primary" id="home">Home</button></a>
+      <a href="/"><button class="button is-primary" id="homepage">Home</button></a>
 
       <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a>
 
