--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -27,7 +27,7 @@
 
       <a href="/"><button class="button is-primary" id="homepage">Home</button></a>
 
-      <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a>
+      {{!-- <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a> --}}
 
       <a href="/inspiration"><button class="button is-primary" id="inspiration">Inspire Me</button></a>
 
@@ -38,7 +38,7 @@
         <div class="buttons">
           <a>
             {{#if logged_in}}
-            <a href="/">Profile</a> |
+            <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a>
             <button class="button is-primary" id="logout">Logout</button>
             {{else}}
              <a href="/login"><button class="button is-primary" id="login">Login/Sign-Up</button></a>
