--- a/views/inspiration.handlebars
+++ b/views/inspiration.handlebars
@@ -1,8 +1,12 @@
-<div>
+<div class="container d-flex flex-wrap justify-content-center">
+  
   {{#each quotes as |quote|}}
-    {{!-- {{> quotes}} --}}
-    <h4>{{quote.quote}}</h4>
-    <h5>{{quote.author}}</h5>
+  <div class="card text-center ml-4 mr-4 mb-5 border-dark">
+    <div class="card-body bg-danger text-light">
+    <h4 class="card-header">{{quote.quote}}</h4>
+    <h5 class="card-title">{{quote.author}}</h5>
+    </div>
+  </div>
   {{/each}}
   <a href='#' class='previous-quote'>&laquo; Previous quote</a>
 
