--- a/views/inspiration.handlebars
+++ b/views/inspiration.handlebars
@@ -29,8 +29,10 @@
 
     
 
-    <br />
+    {{!-- <br />
 
-  </form>
+  </form> --}}
 
 </div>
+
+<script src="/Inspirit-Group-Project-2/public/js/inspiration.js"></script>
