fixed up card page

--- a/views/inspiration.handlebars
+++ b/views/inspiration.handlebars
@@ -35,4 +35,4 @@
 
 </div>
 
-<script src="/Inspirit-Group-Project-2/public/js/inspiration.js"></script>
+<script src="/js/inspiration.js"></script>
