--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,11 +18,11 @@ header, .project:not(:last-child) {
 }
 
 .home-container {
-  background-image: url('../../images/homepageimage.jpg');
+  background-image: url('/images/homepageimage.jpg');
   
 }
 
 .card {
-  width: 20%;
+  width: 30%;
+  height: 80%;
 }
-
