--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
-header, .project:not(:last-child) {
+header,
+.project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
@@ -17,12 +18,29 @@ header, .project:not(:last-child) {
   text-decoration: underline;
 }
 
-.home-container {
-  background-image: url('/images/homepageimage.jpg');
-  
-}
-
 .card {
   width: 30%;
   height: 80%;
+}
+footer.footer {
+  color: #00d1b2;
+  background-color: lightgray;
+}
+
+.homepage-header {
+  font-size: 75px;
+  color: #00d1b2;
+  border-bottom: solid;
+  border-color: gray;
+  padding-bottom: 15px;
+}
+
+button {
+  margin: 5px;
+}
+html {
+  background-color: lightgray;
+}
+.navbar-start {
+  background-color: lightgray;
 }
