--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,21 @@
-<div class = "home-container">
-  {{!-- <img src="../images/homepageimage.jpg" /> --}}
+<div class='home-container'>
+  {{! <img src="../images/homepageimage.jpg" /> }}
+  <header class='homepage-header'>
+    Inspirit
+  </header>
   <body>
-  <p class = "about"> In spirit with the theme of this app, how this app came to be started with its creators being at a loss for inspiration. Eventually, it dawned on the creators that an app to help stimulate creativity would be helpful to anyone. Inspirit's goal is to expose users to new quotes and ideas to aid users' innovation and imaginations.</p>
-  <br>
-  <p class = "instructions"> When you log in, click on the "Inspire Me" tab. Then, you'll be presented with a series of quotes from a diverse number of speakers/people. If any of these quotes resonate with you, then you can click to save that quote to your portfolio. In the portfolio section, you can revisit the quotes you liked.</p>
+    <p class='about'>
+      In spirit with the theme of this app, how this app came to be started with
+      its creators being at a loss for inspiration. Eventually, it dawned on the
+      creators that an app to help stimulate creativity would be helpful to
+      anyone. Inspirit's goal is to expose users to new quotes and ideas to aid
+      users' innovation and imaginations.</p>
+    <br />
+    <p class='instructions'>
+      When you log in, click on the "Inspire Me" tab. Then, you'll be presented
+      with a series of quotes from a diverse number of speakers/people. If any
+      of these quotes resonate with you, then you can click to save that quote
+      to your portfolio. In the portfolio section, you can revisit the quotes
+      you liked.</p>
   </body>
 </div>
-
