--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,10 +1,8 @@
 <footer class="footer">
   <div class="content has-text-centered">
-    <p>
-      <strong>Inspire</strong> by Group 2</a>. The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a> If you'd like to contact us, use the following:
-      phone number: (555) 100 - 2000
-      email: inspirit@inspirit.com
-    </p>
+       <b>Inspirit</b> by Group 2</a>. The source code is licensed
+      <a href="http://opensource.org/licenses/mit-license.php">MIT</a> If you'd like to contact us, use the following:</br>
+      Phone Number: (555) 100 - 2000</br>
+      Email: inspirit@inspirit.com
   </div>
 </footer>
