--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,50 +1,33 @@
-{{!-- <nav>
-    <div id = "navbar-menu">
-        <ul id = "on-top" class = "navbar-links">
-            <li class = "nav-option">
-                <a class = "link" href = "/">Home</a>
-            </li>
-            {{#if logged_in}}
-            <a href="/">Profile</a> |
-            <button class="button" id="logout">Logout</button>
-            {{else}}
-            <a href="/">Login</a>
-            {{/if}}
-            <li class = "nav-option">
-                <a class = "link" href = "/">Portfolio</a>
-            </li>
-            <li class = "nav-option">
-                <a class = "link" href = "/">Inspire Yourself</a>
-            </li>
-        </ul>
-    </div>
-</nav> --}}
+<nav class='navbar' role='navigation' aria-label='main navigation'>
 
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
+  <div id='navbarBasicExample' class='navbar-menu'>
+    <div class='navbar-start'>
 
-      <a href="/"><button class="button is-primary" id="homepage">Home</button></a>
+      <a href='/'><button
+          class='button is-primary'
+          id='homepage'
+        >Home</button></a>
 
-      {{!-- <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a> --}}
+      {{! <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a> }}
 
-      <a href="/inspiration"><button class="button is-primary" id="inspiration">Inspire Me</button></a>
-
-    </div>
-
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a>
-            {{#if logged_in}}
-            <a href="/portfolio"><button class="button is-primary" id="portfolio">Portfolio</button></a>
-            <button class="button is-primary" id="logout">Logout</button>
-            {{else}}
-             <a href="/login"><button class="button is-primary" id="login">Login/Sign-Up</button></a>
-            {{/if}}
-          </a>
-      </div>
+      <a href='/inspiration'><button
+          class='button is-primary'
+          id='inspiration'
+        >Inspire Me</button></a>
+      <a>
+        {{#if logged_in}}
+          <a href='/portfolio'><button
+              class='button is-primary'
+              id='portfolio'
+            >Portfolio</button></a>
+          <button class='button is-primary' id='logout'>Logout</button>
+        {{else}}
+          <a href='/login'><button
+              class='button is-primary'
+              id='login'
+            >Login/Sign-Up</button></a>
+        {{/if}}
+      </a>
     </div>
   </div>
 </nav>
