--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,4 +1,4 @@
-<p> Below are your saved pieces of inspiration. You may look or edit your comments/thoughts to them as well as remove them when you are finished. If you would like to include your own quote, then contribute!</p>
+<p>Below are your saved pieces of inspiration. You may look or edit your comments/thoughts to them as well as remove them when you are finished. If you would like to include your own quote, then contribute!</p>
 
 <div class="row mt-4">
   <div class="col-md-6">
@@ -23,14 +23,16 @@
     </form>
   </div>
 
-  {{#if user.user_saved.length}}
+  
   <div class="col-md-6 quote-list">
+    {{#if users_saved.length}}
     <h3>Currently saved pieces of inspiration:</h3>
 
-    {{#each user.user_saved as |quote|}}
+    {{#each users_saved as |quote|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{quote.id}}">{{quote.name}}</a></h4>
+        <h4><a href="/project/{{quote.id}}">{{quote.quote}}</a></h4>
+        <p>{{quote.author}}</p>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{quote.id}}">DELETE</button>
@@ -38,6 +40,7 @@
     </div>
     {{/each}}
   </div>
+  
   {{/if}}
 </div>
 
